--- a/elm/index.html
+++ b/elm/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE HTML>
-<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <meta charset="utf-8">
+    <title>C-Path Clinical Trials</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./assets/images/favicon.ico">
   </head>
-  <script src="./index.js"></script>
-  </head>
   <body>
+    <script src="/elm.js"></script>
     <script>
-      var app = Elm.Main.init();
+      const COOKIE_NAME = 'cpath-clinicaltrials-0.1.0';
+      const CRED_COOKIE_NAME = COOKIE_NAME + '.cred';
+      const CART_COOKIE_NAME = COOKIE_NAME + '.cart';
+      var app = Elm.Main.init({
+        flags: {
+          cred: JSON.parse(localStorage.getItem(CRED_COOKIE_NAME)) || null,
+          cart: JSON.parse(localStorage.getItem(CART_COOKIE_NAME)) || null
+        }
+      });
+
+      app.ports.storeCart.subscribe(function(val) {
+        if (val === null) {
+          localStorage.removeItem(CART_COOKIE_NAME);
+        } else {
+          localStorage.setItem(CART_COOKIE_NAME, JSON.stringify(val));
+        }
+      });
+
+      //app.ports.storeCredentials.subscribe(function(session) {
+      //    console.log("storeCredentials: ", session);
+      //    localStorage.setItem(CRED_COOKIE_NAME, JSON.stringify(session));
+      //});
     </script>
   </body>
 </html>
