--- a/elm/index.html
+++ b/elm/index.html
@@ -14,7 +14,7 @@
   <body>
     <script src="/elm.js"></script>
     <script>
-      const COOKIE_NAME = 'cpath-clinicaltrials-0.1.0';
+      const COOKIE_NAME = 'cpath-clinicaltrials-0.1.1';
       const CRED_COOKIE_NAME = COOKIE_NAME + '.cred';
       const CART_COOKIE_NAME = COOKIE_NAME + '.cart';
       var app = Elm.Main.init({
@@ -32,6 +32,7 @@
       }
 
       app.ports.storeCart.subscribe(function(val) {
+        //console.log("storeCart: ", val);
         if (val === null) {
           localStorage.removeItem(CART_COOKIE_NAME);
         } else {
